--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -323,7 +323,6 @@
               <th>Location</th>
               <th>Alias</th>
               <th>Description</th>
-              <th>Popularity</th>
               <th></th>
             </tr>
             <?php @include('../php/tables/fill_locations_table.php'); fillLocationsTable() ?>
@@ -347,21 +346,6 @@
               <label for="new_location_desc"><h4>Change Description:</h4></label>
               <textarea id="new_location_desc" name="new_location_desc" rows="4" cols="50" maxlength="100"></textarea>
             </div>
-            <div class="radio_input_area">
-              <label><h4>Change Popularity:</h4></label>
-              <div class="radio_wrapper">
-                <input type="radio" name="new_location_pop" value="1">
-                <label>1</label>
-                <input type="radio" name="new_location_pop" value="2">
-                <label>2</label>
-                <input type="radio" name="new_location_pop" value="3">
-                <label>3</label>
-                <input type="radio" name="new_location_pop" value="4">
-                <label>4</label>
-                <input type="radio" name="new_location_pop" value="5">
-                <label>5</label>
-              </div>
-            </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Make Changes" />
             </div>
@@ -384,27 +368,12 @@
               <input id="location_name" name="location_name" placeholder="Required" type="text" maxlength="20" required></input>
             </div>
             <div class="input_wrapper capitalize">
-              <label for="location_alias"><h4>Alias*:</h4></label>
-              <input id="location_alias" name="location_alias" placeholder="Required" type="text" maxlength="20"></input>
+              <label for="location_alias"><h4>Alias:</h4></label>
+              <input id="location_alias" name="location_alias" placeholder="Optional" type="text" maxlength="20"></input>
             </div>
             <div class="input_wrapper description">
               <label for="location_desc"><h4>Description:</h4></label>
               <textarea id="location_desc" name="location_desc" value="" placeholder="Optional" rows="4" cols="50" maxlength="100"></textarea>
-            </div>
-            <div class="radio_input_area">
-              <label><h4>Popularity:</h4></label>
-              <div class="radio_wrapper">
-                <input type="radio" name="location_pop" value="1">
-                <label>1</label>
-                <input type="radio" name="location_pop" value="2">
-                <label>2</label>
-                <input type="radio" name="location_pop" value="3">
-                <label>3</label>
-                <input type="radio" name="location_pop" value="4">
-                <label>4</label>
-                <input type="radio" checked="checked" name="location_pop" value="5">
-                <label>5</label>
-              </div>
             </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Add Location" />
@@ -425,11 +394,13 @@
             <tr>
               <th>ID</th>
               <th>Event</th>
-              <th>Start Time</th>
-              <th>End Time</th>
+              <th>Location</th>
+              <th>Start</th>
+              <th>End</th>
               <th>Deviation</th>
               <th>Days</th>
-              <th>Send Alerts</th>
+              <th>Alerts</th>
+              <th>Nature</th>
               <th></th>
             </tr>
             <?php @include('../php/tables/fill_events_table.php'); fillEventsTable() ?>
@@ -487,6 +458,20 @@
                 <input type="radio" name="new_event_alerts" value="0">
                 <label>No</label>
               </div>
+            </div>
+            <spacer class="input_spacer"></spacer>
+            <div class="radio_input_area">
+              <label><h4>Event Nature:</h4></label>
+              <div class="boolean_radio radio_wrapper">
+                <input type="radio" name="new_event_nature" value="1" onclick="disableInput('new_event_location_toggle')">
+                <label>Sign In</label>
+                <input type="radio" name="new_event_nature" value="0" onclick="enableInput('new_event_location_toggle')">
+                <label>Sign Out</label>
+              </div>
+            </div>
+            <div class="input_wrapper capitalize" id="new_event_location_toggle">
+              <label for="new_event_location_id"><h4>Location ID:</h4></label>
+              <input id="new_event_location_id" name="new_event_location_id" type="number" min="1" max="999"></input>
             </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Make Changes" />
@@ -551,6 +536,20 @@
                 <input type="radio" name="event_alerts" value="0" checked="checked">
                 <label>No</label>
               </div>
+            </div>
+            <spacer class="input_spacer"></spacer>
+            <div class="radio_input_area">
+              <label><h4>Event Nature:</h4></label>
+              <div class="boolean_radio radio_wrapper">
+                <input type="radio" name="event_nature" value="1" onclick="disableInput('event_location_toggle')">
+                <label>Sign In</label>
+                <input type="radio" name="event_nature" value="0" checked="checked" onclick="enableInput('event_location_toggle')">
+                <label>Sign Out</label>
+              </div>
+            </div>
+            <div class="input_wrapper capitalize" id="event_location_toggle">
+              <label for="event_location_id"><h4>Location ID:</h4></label>
+              <input id="event_location_id" name="event_location_id" type="number" min="1" max="999"></input>
             </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Add event" />
