Notifications can now appear in the home page
Notifications are used to alert users when sign in's were successful, unsuccessful or any details where incorrect

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -32,6 +32,9 @@
       <button><h5>HELP</h5></button>
     </navbar>
   </header>
+  <section id="notification_wrapper" class="text notification">
+    <h4>TESTING</h4>
+  </section>
   <section id="login_box" class="text">
     <div class="login_preset" id="student_selection_preset">
       <header class="text">
