--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -471,7 +471,7 @@
             </div>
             <div class="input_wrapper capitalize" id="new_event_location_toggle">
               <label for="new_event_location_id"><h4>Location ID:</h4></label>
-              <input id="new_event_location_id" name="new_event_location_id" type="number" min="1" max="999"></input>
+              <input id="new_event_location_id" name="new_event_location_id" type="number" min="1" max="999" required></input>
             </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Make Changes" />
@@ -549,7 +549,7 @@
             </div>
             <div class="input_wrapper capitalize" id="event_location_toggle">
               <label for="event_location_id"><h4>Location ID:</h4></label>
-              <input id="event_location_id" name="event_location_id" type="number" min="1" max="999"></input>
+              <input id="event_location_id" name="event_location_id" type="number" min="1" max="999" required></input>
             </div>
             <div class="input_wrapper">
               <input class="submit_button" type="submit" value="Add event" />
