--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -30,9 +30,7 @@
           <li class="sidebar_subtitle"><h3>Information</h3></li>
           <li onclick="toggleMainSection(this.id,'m1')" class="sidebar_button sidebar_button_active" id="s1"><h4>Home</h4></li>
           <li onclick="toggleMainSection(this.id,'m2')" class="sidebar_button" id="s2"><h4>Activity</h4></li>
-          <li onclick="toggleMainSection(this.id,'m3')" class="sidebar_button" id="s3"><h4>Sign In Log</h4></li>
-          <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Sign Out Log</h4></li>
-          <li onclick="toggleMainSection(this.id,'m5')" class="sidebar_button" id="s5"><h4>Events</h4></li>
+          <li onclick="toggleMainSection(this.id,'m3')" class="sidebar_button" id="s3"><h4>Events</h4></li>
           <li class="sidebar_subtitle"><h3>Account</h3></li>
           <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Change Password</h4></li>
           <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Customise</h4></li>
@@ -41,18 +39,12 @@
     </div>
     <div class="text main">
       <section class="main_section main_section_active" id="m1">
-        <h2>Welcome, <?=$_SESSION["staff_username"]?>.</h2>
+        <h2>Welcome, <?=$_SESSION["staffUsername"]?>.</h2>
       </section>
       <section class="main_section" id="m2">
         <h2>Activity</h2>
       </section>
       <section class="main_section" id="m3">
-        <h2>Sign In Log</h2>
-      </section>
-      <section class="main_section" id="m4">
-        <h2>Sign Out Log</h2>
-      </section>
-      <section class="main_section" id="m5">
         <h2>Events</h2>
       </section>
       <section class="main_section" id="m11">
