--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -31,8 +31,8 @@
           <li class="sidebar_subtitle"><h3>Information</h3></li>
           <li onclick="toggleMainSection(this.id,'m1')" class="sidebar_button sidebar_button_active" id="s1"><h4>Home</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Staff</h3></li>
-          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Edit Staff</h4></li>
-          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Staff Activity</h4></li>
+          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Staff</h4></li>
+          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Edit Staff</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Users</h3></li>
           <li onclick="toggleMainSection(this.id,'m21')" class="sidebar_button" id="s21"><h4>Edit Users</h4></li>
           <li class="sidebar_subtitle"><h3>Manage Database</h3></li>
@@ -47,10 +47,37 @@
       </section>
 
       <section class="main_section" id="m11">
-        <h2 class="title">Edit Staff</h2>
+        <h2>Staff</h2>
+        <div class="info_wrapper text">
+          <p>Welcome to the staff area. In this area, you are able to see signed in staff at a glance. Need to know who is currently signed in? You can quickly glance at the table to find out.</p>
+        </div>
+        <spacer></spacer>
         <div class="table_wrapper">
           <header>
-            <h2>Staff</h2>
+            <h2>Staff Status</h2>
+          </header>
+          <table class='table' id="user_status_table">
+            <tr>
+              <th>Status</th>
+              <th>Username</th>
+              <th>Access Level</th>
+              <th>Time last active</th>
+              <th>Date last active</th>
+            </tr>
+            <?php @include('../php/tables/admin/staff_status.php'); fillStaffStatusTable() ?>
+          </table>
+          <footer/>
+        </div>
+      </section>
+      <section class="main_section" id="m12">
+        <h2>Edit Staff</h2>
+        <div class="info_wrapper text">
+          <p>Welcome to the edit staff area. In this area, you are able to add, edit and remove staff accounts to and from the system. Different access levels allow staff users to perform different actions.</p>
+        </div>
+        <spacer></spacer>
+        <div class="table_wrapper">
+          <header>
+            <h2>Staff Accounts</h2>
             <div class="button_wrapper">
               <button onclick="toggleHiddenSection('staff_add_section');" class="add_button" id="add_staff_button">Add Staff</button>
             </div>
@@ -59,13 +86,13 @@
             <tr>
               <th>ID</th>
               <th>Username</th>
+              <th>Access Level</th>
               <th>Forename</th>
               <th>Surname</th>
               <th>Email</th>
-              <th>Access Level</th>
               <th></th>
             </tr>
-            <?php @include('../php/tables/fill_staff_table.php'); fillStaffTable() ?>
+            <?php @include('../php/tables/admin/staff_accounts.php'); loadStaffAccountsTable() ?>
           </table>
           <footer/>
         </div>
@@ -98,11 +125,11 @@
               <label><h4>Access Level:</h4></label>
               <div class="radio_wrapper">
                 <input type="radio" name="new_staff_access_level" value="1">
-                <label>[1] Staff</label>
+                <label>Staff</label>
                 <input type="radio" name="new_staff_access_level" value="2">
-                <label>[2] Moderator</label>
+                <label>Moderator</label>
                 <input type="radio" name="new_staff_access_level" value="3">
-                <label>[3] Admin</label>
+                <label>Admin</label>
               </div>
             </div>
             <div class="input_wrapper">
@@ -146,11 +173,11 @@
               <label><h4>Access Level:</h4></label>
               <div class="radio_wrapper">
                 <input type="radio" checked="checked" name="staff_access_level" value="1">
-                <label>[1] Staff</label>
+                <label>Staff</label>
                 <input type="radio" name="staff_access_level" value="2">
-                <label>[2] Moderator</label>
+                <label>Moderator</label>
                 <input type="radio" name="staff_access_level" value="3">
-                <label>[3] Admin</label>
+                <label>Admin</label>
               </div>
             </div>
             <div class="input_wrapper">
@@ -159,39 +186,7 @@
           </form>
         </section>
       </section>
-      <section class="main_section" id="m12">
-        <h2 class="title">Staff Activity</h2>
-        <div class="table_wrapper">
-          <header>
-            <h2>Currently Signed In</h2>
-          </header>
-          <table class='table' id='staff_signed_in_table'>
-            <tr>
-              <th>Staff Username</th>
-              <th>Date</th>
-              <th>Time</th>
-            </tr>
-            <?php @include('../php/tables/fill_staff_signed_in_table.php'); fillStaffSignedInTable() ?>
-          </table>
-          <footer/>
-        </div>
-        <div class="table_wrapper">
-          <header>
-            <h2>Sign In activity</h2>
-          </header>
-          <table class='table' id='staff_activity_table'>
-            <tr>
-              <th>Staff Username</th>
-              <th>Sign In Date</th>
-              <th>Sign In Time</th>
-              <th>Sign Out Date</th>
-              <th>Sign Out Time</th>
-            </tr>
-            <?php @include('../php/tables/fill_staff_activity_table.php'); fillStaffActivityTable() ?>
-          </table>
-          <footer/>
-        </div>
-      </section>
+
 
       <section class="main_section" id="m21">
         <h2 class="title">Edit Users</h2>
@@ -213,7 +208,7 @@
               <th>Initials</th>
               <th></th>
             </tr>
-            <?php @include('../php/tables/fill_users_table.php'); fillUsersTable() ?>
+            <?php @include('../php/tables/admin/user_accounts.php'); loadUserAccountsTable() ?>
           </table>
           <footer/>
         </div>
@@ -317,7 +312,7 @@
               <th>Description</th>
               <th></th>
             </tr>
-            <?php @include('../php/tables/fill_locations_table.php'); fillLocationsTable() ?>
+            <?php @include('../php/tables/admin/locations.php'); loadLocationsTable() ?>
           </table>
           <footer/>
         </div>
@@ -395,7 +390,7 @@
               <th>Nature</th>
               <th></th>
             </tr>
-            <?php @include('../php/tables/fill_events_table.php'); fillEventsTable() ?>
+            <?php @include('../php/tables/admin/events.php'); loadEventsTable() ?>
           </table>
           <footer/>
         </div>
