--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -28,26 +28,28 @@
         <ul id="sidebar_contents">
           <li class="sidebar_subtitle"><h2>Menu</h2></li>
           <li class="sidebar_subtitle"><h3>Information</h3></li>
-          <li onclick="toggleMainSection(this.id,'m1')" class="sidebar_button sidebar_button_active" id="s1"><h4>Home</h4></li>
-          <li onclick="toggleMainSection(this.id,'m2')" class="sidebar_button" id="s2"><h4>Activity</h4></li>
-          <li onclick="toggleMainSection(this.id,'m3')" class="sidebar_button" id="s3"><h4>Users</h4></li>
-          <li onclick="toggleMainSection(this.id,'m4')" class="sidebar_button" id="s4"><h4>Events</h4></li>
-          <li onclick="toggleMainSection(this.id,'m5')" class="sidebar_button" id="s5"><h4>Off Site</h4></li>
-          <li onclick="toggleMainSection(this.id,'m10')" class="sidebar_button" id="s10"><h4>About</h4></li>
+          <li onclick="toggleMainSection(this.id,'home_section')" class="sidebar_button sidebar_button_active" id="home_button"><h4>Home</h4></li>
+          <li onclick="toggleMainSection(this.id,'activity_section')" class="sidebar_button" id="activity_button"><h4>Activity</h4></li>
+          <li onclick="toggleMainSection(this.id,'users_section')" class="sidebar_button" id="users_button"><h4>Users</h4></li>
+          <li onclick="toggleMainSection(this.id,'off_site_section')" class="sidebar_button" id="off_site_button"><h4>Off Site</h4></li>
+          <li onclick="toggleMainSection(this.id,'about_section')" class="sidebar_button" id="about_button"><h4>About</h4></li>
+          <li class="sidebar_subtitle"><h3>Events</h3></li>
+          <li onclick="toggleMainSection(this.id,'events_summary_section')" class="sidebar_button" id="events_summary_button"><h4>Summary</h4></li>
+          <?php @include('../php/sidebar/staff/event_buttons.php'); loadSidebarEventButtons() ?>
           <li class="sidebar_subtitle"><h3>Account</h3></li>
-          <li onclick="toggleMainSection(this.id,'m11')" class="sidebar_button" id="s11"><h4>Change Password</h4></li>
-          <li onclick="toggleMainSection(this.id,'m12')" class="sidebar_button" id="s12"><h4>Customise</h4></li>
+          <li onclick="toggleMainSection(this.id,'change_password_section')" class="sidebar_button" id="change_password_button"><h4>Change Password</h4></li>
+          <li onclick="toggleMainSection(this.id,'customise_section')" class="sidebar_button" id="customise_button"><h4>Customise</h4></li>
         </ul>
       </container>
     </div>
     <div class="text main">
-      <section class="main_section main_section_active" id="m1">
+      <section class="main_section main_section_active" id="home_section">
         <h2>Welcome, <?=$_SESSION["staffUsername"]?>.</h2>
         <div class="info_wrapper text">
           <p>Welcome to DOYRMS registration, a web application programmed by Luke Holten.</p>
         </div>
       </section>
-      <section class="main_section" id="m2">
+      <section class="main_section" id="activity_section">
         <h2>Activity</h2>
         <div class="info_wrapper text">
           <p>Welcome to the activity area. In this area you are able to see the most recent user activity. By looking at the table below, you can see users which have recently signed in and out. In addition to this, you may also receive alerts when a user have forgotten to sign in.</p>
@@ -62,6 +64,7 @@
               <th>In/Out</th>
               <th>Time</th>
               <th>Message</th>
+              <th>Event</th>
               <th>Date</th>
             </tr>
             <?php @include('../php/tables/staff/recent_activity.php'); fillRecentActivityTable() ?>
@@ -69,7 +72,7 @@
           <footer/>
         </div>
       </section>
-      <section class="main_section" id="m3">
+      <section class="main_section" id="users_section">
         <h2>Users</h2>
         <div class="info_wrapper text">
           <p>Welcome to the users area. In this area, you are able to see where users are at a glance. Need to know where someone is? You can quickly glance at the table to find out where they are.</p>
@@ -93,24 +96,34 @@
           <footer/>
         </div>
       </section>
-      <section class="main_section" id="m4">
-        <h2>Events</h2>
-      </section>
-      <section class="main_section" id="m5">
+      <section class="main_section" id="off_site_section">
         <h2>Off Site</h2>
       </section>
-      <section class="main_section" id="m10">
+      <section class="main_section" id="about_section">
         <h2>About</h2>
         <div class="info_wrapper text">
           <p>This system was designed to improve paper based registration systems by re-innovating the process using technology. By doing this, an improved link can be established between its users and the authorities monitoring their activity.</p>
           <p>To summarise, DOYRMS registration allows users to sign in and out of a location using a digital kiosk. By being digital, staff users are able to see where users are located at all times, as well as further functionality through a designated search area which allows staff to search for specific users.  By defining events, administrators can set quotas that must be met by users. If a user fails to sign in or out for an event, staff users will be notified through the web interface.</p>
         </div>
       </section>
-      
-      <section class="main_section" id="m11">
+
+      <section class="main_section" id="events_summary_section">
+        <h2>Events - Summary</h2>
+        <div class="info_wrapper text">
+          <p>Welcome to the events summary area. In this area, you can see all active events. This includes when the event starts and ends, as well as how early or late users may be when signing out.</p>
+          <spacer></spacer>
+          <ul class="event_card_container">
+            <?php @include('../php/sections/staff/event_cards.php'); loadEventCards() ?>
+          </ul>
+        </div>
+        <spacer></spacer>
+      </section>
+      <?php @include('../php/sections/staff/event_sections.php'); loadEventSections() ?>
+
+      <section class="main_section" id="change_password_section">
         <h2>Account - Change Password</h2>
       </section>
-      <section class="main_section" id="m12">
+      <section class="main_section" id="customise_section">
         <h2>Account - Customise</h2>
       </section>
     </div>
