--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -6,7 +6,11 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
 
 <!-- autocomplete scripts -->
-<script type="text/javascript" src="../../scripts/ajax/autocomplete_scripts.js"></script>
+<script type="text/javascript" src="../../scripts/jquery/autocomplete_scripts.js"></script>
+<!-- dynamic  background -->
+<script type="text/javascript" src="../../scripts/jquery/dynamic_background.js"></script>
+<!-- idle overlay -->
+<script type="text/javascript" src="../../scripts/jquery/idle_overlay.js"></script>
 
 <!-- home page javascript functions -->
 <script type="text/javascript" src="../../scripts/home_page_functions.js"></script>
