--- a/pages/html/admin_page.html
+++ b/pages/html/admin_page.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <head>
+<!-- jQuery UI -->
+<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+
+<!-- dynamic  background -->
+<script type="text/javascript" src="../../scripts/jquery/dynamic_background.js"></script>
+
+<!-- admin page javascript functions -->
 <script src="../../scripts/staff_page_functions.js"></script>
 <script src="../../scripts/admin_page_functions.js"></script>
+
 <meta charset="UTF-8" lang="en">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Admin | DOYRMS Registration</title>
