Staff users can now see restrcited users and the staff home section displays real data metrics

--- a/pages/html/home_page.html
+++ b/pages/html/home_page.html
@@ -25,7 +25,7 @@
 </section>
 <body>
   <header class="text" id="main_header">
-    <img src="../../images/logo.png"></img>
+    <img src="../../images/png/logo.png"></img>
     <h1>DOYRMS Registration</h1>
     <navbar>
       <button class="navbar_button blue_button" id="back_button" onclick="backButton()"><span class="left_arrow"></span><spacer></spacer><h5>BACK</h5></button>
