--- a/pages/html/staff_page.html
+++ b/pages/html/staff_page.html
@@ -46,9 +46,8 @@
           <li onclick="toggleMainSection(this.id,'home_section')" class="sidebar_button sidebar_button_active" id="home_button"><h4>Home</h4></li>
           <li onclick="toggleMainSection(this.id,'activity_section')" class="sidebar_button" id="activity_button"><h4>Activity</h4></li>
           <li onclick="toggleMainSection(this.id,'users_section')" class="sidebar_button" id="users_button"><h4>Users</h4></li>
-          <li onclick="toggleMainSection(this.id,'away_section')" class="sidebar_button" id="away_button"><h4>Away</h4></li>
           <li onclick="toggleMainSection(this.id,'restricted_section')" class="sidebar_button" id="restricted_button"><h4>Restricted</h4></li>
-          <li onclick="toggleMainSection(this.id,'about_section')" class="sidebar_button" id="about_button"><h4>About</h4></li>
+          <li onclick="toggleMainSection(this.id,'away_section')" class="sidebar_button" id="away_button"><h4>Away</h4></li>
           <li class="sidebar_subtitle"><h3>Events</h3></li>
           <li onclick="toggleMainSection(this.id,'events_summary_section')" class="sidebar_button" id="events_summary_button"><h4>Summary</h4></li>
           <?php @include('../php/sidebar/staff/event_buttons.php'); loadSidebarEventButtons() ?>
@@ -96,7 +95,8 @@
       <section class="main_section" id="activity_section">
         <h2>Activity</h2>
         <div class="info_wrapper text">
-          <p>Welcome to the activity area. In this area you are able to see the most recent user activity. By looking at the table below, you can see users which have recently signed in and out. In addition to this, you may also receive alerts when a user have forgotten to sign in.</p>
+          <p>Welcome to the activity area. In this area you are able to see the most recent user activity. By looking at the table below, you can see users which have recently signed in and out.</p>
+          <p>Users shown in red are restricted, this means that they may only use the system for events.</p>
         </div>
         <spacer></spacer>
         <div class="table_wrapper">
@@ -120,6 +120,7 @@
         <h2>Users</h2>
         <div class="info_wrapper text">
           <p>Welcome to the users area. In this area, you are able to see where users are at a glance. Need to know where someone is? You can quickly glance at the table to find out where they are.</p>
+          <p>Users shown in red are restricted, this means that they may only use the system for events.</p>
         </div>
         <spacer></spacer>
         <div class="table_wrapper">
@@ -188,13 +189,6 @@
             <?php @include('../php/tables/staff/restricted_users.php'); fillRestrictedUsersTable() ?>
           </table>
           <footer/>
-        </div>
-      </section>
-      <section class="main_section" id="about_section">
-        <h2>About</h2>
-        <div class="info_wrapper text">
-          <p>This system was designed to improve paper based registration systems by re-innovating the process using technology. By doing this, an improved link can be established between its users and the authorities monitoring their activity.</p>
-          <p>To summarise, DOYRMS registration allows users to sign in and out of a location using a digital kiosk. By being digital, staff users are able to see where users are located at all times, as well as further functionality through a designated search area which allows staff to search for specific users.  By defining events, administrators can set quotas that must be met by users. If a user fails to sign in or out for an event, staff users will be notified through the web interface.</p>
         </div>
       </section>
 
